# icy_draw

./: Cargo.toml  README.md
.github/workflows/: build.yml
crates/icy_play/: Cargo.toml
crates/icy_play/src/: com.rs  main.rs
crates/play_anim/: Cargo.toml
crates/play_anim/src/: main.rs
data/: resources.gresource
data/palettes/: ANSI32-EHB-64.gpl  ansi32.gpl
doc/: ICEDFormat.md  lua_api.md
doc/specs/: sauce.html  x_spec.htm
i18n/de/: icy_draw.ftl
i18n/en/: icy_draw.ftl
src/: main.rs
src/model/: mod.rs
src/model/editor/: mod.rs  undo_stack.rs
src/model/tool/: brush_imp.rs  brush_tool.rs  click_imp.rs  click_tool.rs  draw_ellipse_filled_imp.rs  draw_ellipse_imp.rs  draw_rectangle_filled_imp.rs  draw_rectangle_imp.rs  draw_shape_tool.rs  erase_imp.rs  erase_tool.rs  fill_imp.rs  fill_tool.rs  flip_imp.rs  font_imp.rs  font_tool.rs  icons.rs  line_imp.rs  mod.rs  move_layer_imp.rs  paint_tool.rs  pencil_imp.rs  pipette_imp.rs  scan_lines.rs  select_tool.rs
src/model/tools/: brush_imp.rs  click_imp.rs  draw_ellipse_filled_imp.rs  draw_ellipse_imp.rs  draw_rectangle_filled_imp.rs  draw_rectangle_imp.rs  erase_imp.rs  fill_imp.rs  flip_imp.rs  font_imp.rs  icons.rs  line_imp.rs  mod.rs  move_layer_imp.rs  paste_tool.rs  pencil_imp.rs  pipette_imp.rs  scan_lines.rs  select_imp.rs
src/paint/: ellipse.rs  half_block.rs  line.rs  mod.rs  rectangle.rs
src/plugins/: elite-writing.lua.txt  mod.rs
src/ui/: bitfont_selector.rs  char_table.rs  commands.rs  docking.rs  document.rs  document_docking.rs  edit_sauce_dialog.rs  font_editor.rs  icons.rs  icy_draw.ftl  layer_view.rs  main_window.rs  messages.rs  mod.rs  new_file_dialog.rs  palette_editor.rs  select_character_dialog.rs  select_outline_dialog.rs  set_canvas_size_dialog.rs  settings.rs  terminal_window.rs  tool_docking.rs  tool_switcher.rs  top_bar.rs
src/ui/ansi_editor/: buffer_view.rs  key_maps.rs  mod.rs  render.rs  render.shader.frag  sixel.rs
src/ui/buffer_view/: mod.rs  render.rs
src/ui/dialogs/: about_dialog.rs  ask_close_file_dialog.rs  auto_save_dialog.rs  edit_layer_dialog.rs  edit_sauce_dialog.rs  font_manager.rs  font_selector.rs  mod.rs  new_file_dialog.rs  open_file_dialog.rs  open_referenceimage_dialog.rs  resize_layer_dialog.rs  save_file_dialog.rs  select_character_dialog.rs  select_font_dialog.rs  select_outline_dialog.rs  select_palette_dialog.rs  select_tdf_font_dialog.rs  set_canvas_size_dialog.rs  settings_dialog.rs
src/ui/dialogs/export_file_dialog/: ansi.rs  ascii.rs  avatar.rs  bin.rs  ice_draw.rs  mod.rs  pcboard.rs  png.rs  xbin.rs
src/ui/editor/: mod.rs  undo_stack.rs
src/ui/editor/animation/: animator.rs  asciicast_encoder.rs  encoding.rs  gif_encoder.rs  highlighting.rs  lua_api.txt  mod.rs  mp4_encoder.rs
src/ui/editor/ansi/: mod.rs  undo_stack.rs
src/ui/editor/bitfont/: mod.rs  undo.rs
src/ui/editor/charfont/: mod.rs
src/ui/export_file_dialog/: ansi.rs  ascii.rs  avatar.rs  mod.rs
src/ui/old/: buffer_view.rs  key_maps.rs  mod.rs  render.rs  sixel.rs
src/ui/palette/: ansi32.ase  ansi32.hex  ansi32.pal  ansi32.txt  mod.rs
src/ui/tools/: bitfont_selector.rs  channels.rs  char_table.rs  layer_view.rs  minimap_view.rs  mod.rs
src/util/: autosave.rs  mod.rs
