[package]
name = "icy_play"
version = "0.1.0"
edition = "2021"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
description = "Plays icy_anim files for bbs systems."
license = "Apache-2.0"
repository = "https://github.com/mkrueger/icy_draw"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icy_engine = { git ="https://github.com/mkrueger/icy_engine", features=["minimal"], default-features = false  }
icy_engine_egui = { git ="https://github.com/mkrueger/icy_engine_egui", features = ["animations"], default-features = false }
#icy_engine = { path = "../../../icy_engine", features=["minimal"], default-features = false }
#icy_engine_egui = { path = "../../../icy_engine_egui", features = ["animations"], default-features = false}
clap = { version="4.4.0", features = ["derive"] }
anyhow = "1.0.75"

[profile.release]
strip = "symbols"
